--- a/ideco/concept.html
+++ b/ideco/concept.html
@@ -90,7 +90,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 item1 btn_hover plur item_link">
-					<a href="#sec2">
+					<a href="contact.html#sec2">
 						<p class="ttl"><span>特約店募集</span></p>
 						<div class="btn_link">
 							<img src="shared/img/shared/arrow2.png" alt="" class="btn1">
@@ -106,7 +106,7 @@
 					</a>
 				</div>
 				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 item1 bdn btn_hover plur item_link">
-					<a href="#sec3">
+					<a href="contact.html#sec3">
 						<p class="ttl"><span>ショールーム<br class="visible-mb">に行く</span></p>
 						<div class="btn_link">
 							<img src="shared/img/shared/arrow2.png" alt="" class="btn1">
