--- a/ideco/merit.html
+++ b/ideco/merit.html
@@ -39,7 +39,7 @@
 					</a>
 					<li class="btn_over"><a href="index.html" class="btn1">HOME</a></li>
 					<li class="btn_over"><a href="#" class="op30">壁の未来</a></li>
-					<li class="btn_over"><a href="">Concept</a></li>
+					<li class="btn_over"><a href="concept.html">Concept</a></li>
 					<li class="btn_over"><a href="product.html" class="btn1">製品情報</a></li>
 					<li class="btn_over"><a href="function.html" class="btn1">機能紹介</a></li>
 					<li class="btn_over"><a href="contact.html" class="btn1">お問い合わせ</a></li>
@@ -173,7 +173,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 item1 btn_hover plur item_link">
-					<a href="#sec2">
+					<a href="contact.html#sec2">
 						<p class="ttl"><span>特約店募集</span></p>
 						<div class="btn_link">
 							<img src="shared/img/shared/arrow2.png" alt="" class="btn1">
@@ -189,7 +189,7 @@
 					</a>
 				</div>
 				<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 item1 bdn btn_hover plur item_link">
-					<a href="#sec3">
+					<a href="contact.html#sec3">
 						<p class="ttl"><span>ショールーム<br class="visible-mb">に行く</span></p>
 						<div class="btn_link">
 							<img src="shared/img/shared/arrow2.png" alt="" class="btn1">
